--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Weather</h1>
-    <footer>Coded by Sarah Wiens.</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/sarahwiens" target="_blank">Sarah Wiens</a>,
+      found on
+      <a href="https://github.com/sarahwiens/weather" target="_blank">GitHub</a>
+      and hosted on
+      <a href="https://sarahwiens-weatherapp.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
+    </footer>
   </body>
 </html>
