updated footer copy

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <body>
     <h1>Weather</h1>
     <footer>
-      Coded by
+      Code by
       <a href="https://github.com/sarahwiens" target="_blank">Sarah Wiens</a>,
-      found on
-      <a href="https://github.com/sarahwiens/weather" target="_blank">GitHub</a>
-      and hosted on
+      is
+      <a href="https://github.com/sarahwiens/weather" target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
       <a href="https://sarahwiens-weatherapp.netlify.app/" target="_blank"
-        >Netlify</a
+        >hosted on Netlify</a
       >.
     </footer>
   </body>
