added basic html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>City Name</h1>
+      <div>
+        <p>
+          Day time, weather description <br />
+          Humidity: <strong>00%</strong> Wind: <strong>00km/h</strong>
+        </p>
+      </div>
+      <div>☀ 00°C</div>
+    </main>
     <footer>
       Code by
       <a href="https://github.com/sarahwiens" target="_blank">Sarah Wiens</a>,
