--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div class="current-temperature-container">
-            <div>☀</div>
+            <div class="current-temperature-icon">☀</div>
             <div class="current-temperature">00</div>
             <div class="current-temperature-unit">°C</div>
           </div>
