static forecast section built basic HTML/CSS

--- a/index.html
+++ b/index.html
@@ -48,6 +48,58 @@
             <div class="current-temperature-unit">°C</div>
           </div>
         </div>
+        <div class="forecast-weather-container">
+          <div class="forecast-weather-day-container">
+            <div class="forecast-weather-day">Mon</div>
+            <div class="forecast-weather-icon">🌤</div>
+            <div class="forecast-weather-temperature">
+              <div class="forecast-weather-temperature-high">
+                <strong>25°C</strong>
+              </div>
+              <div class="forecast-weather-temperature-low">13°C</div>
+            </div>
+          </div>
+          <div class="forecast-weather-day-container">
+            <div class="forecast-weather-day">Tue</div>
+            <div class="forecast-weather-icon">🌤</div>
+            <div class="forecast-weather-temperature">
+              <div class="forecast-weather-temperature-high">
+                <strong>24°C</strong>
+              </div>
+              <div class="forecast-weather-temperature-low">14°C</div>
+            </div>
+          </div>
+          <div class="forecast-weather-day-container">
+            <div class="forecast-weather-day">Wed</div>
+            <div class="forecast-weather-icon">🌧</div>
+            <div class="forecast-weather-temperature">
+              <div class="forecast-weather-temperature-high">
+                <strong>22°C</strong>
+              </div>
+              <div class="forecast-weather-temperature-low">11°C</div>
+            </div>
+          </div>
+          <div class="forecast-weather-day-container">
+            <div class="forecast-weather-day">Thu</div>
+            <div class="forecast-weather-icon">🌤</div>
+            <div class="forecast-weather-temperature">
+              <div class="forecast-weather-temperature-high">
+                <strong>24°C</strong>
+              </div>
+              <div class="forecast-weather-temperature-low">11°C</div>
+            </div>
+          </div>
+          <div class="forecast-weather-day-container">
+            <div class="forecast-weather-day">Fri</div>
+            <div class="forecast-weather-icon">☀</div>
+            <div class="forecast-weather-temperature">
+              <div class="forecast-weather-temperature-high">
+                <strong>26°C</strong>
+              </div>
+              <div class="forecast-weather-temperature-low">18°C</div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         Code by
